# Hexxagon

./: CMakeLists.txt  PR.md  game.cpp  game.h  game_entities.cpp  game_entities.h  main.cpp  window_wrapper.cpp  window_wrapper.h
entities/: ai.h  board.cpp  board.h  game_entities.cpp  move.cpp  move.h  pawn.h  playable_sides.cpp  playable_sides.h  player.h  tile.h
main/: background.cpp  background.h  game.cpp  game.h  game_manager.cpp  game_manager.h  util.cpp  util.h  window_wrapper.cpp  window_wrapper.h
